// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports are formatted to datums: current month cost data 1`] = `
Array [
  Object {
    "key": "12-15-17",
    "units": "USD",
    "x": 15,
    "y": 0,
  },
]
`;

exports[`reports are formatted to datums: current month infrastructure cost data 1`] = `
Array [
  Object {
    "key": "1-15-18",
    "units": "USD",
    "x": 15,
    "y": 0,
  },
]
`;

exports[`reports are formatted to datums: previous month cost data 1`] = `
Array [
  Object {
    "key": "12-15-17",
    "units": undefined,
    "x": 15,
    "y": 0,
  },
]
`;

exports[`reports are formatted to datums: previous month infrastructure cost data 1`] = `
Array [
  Object {
    "key": "1-15-18",
    "units": undefined,
    "x": 15,
    "y": 0,
  },
]
`;

exports[`trend is a daily value: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "values": Array [
      Object {
        "date": "1-15-18",
        "usage": Object {
          "units": "unit",
          "value": 1,
        },
      },
    ],
  },
  Object {
    "date": "1-16-18",
    "values": Array [
      Object {
        "date": "1-16-18",
        "usage": Object {
          "units": "unit",
          "value": 2,
        },
      },
    ],
  },
]
`;

exports[`trend is a running total: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "values": Array [
      Object {
        "date": "1-15-18",
        "usage": Object {
          "units": "unit",
          "value": 1,
        },
      },
    ],
  },
  Object {
    "date": "1-16-18",
    "values": Array [
      Object {
        "date": "1-16-18",
        "usage": Object {
          "units": "unit",
          "value": 2,
        },
      },
    ],
  },
]
`;
